fable/test/syntax_error/dot_e.f
      program prog
	x	=	.e0
      end
